# desktop-copilot

./: DEPLOYMENT.md
Agent/: .gitignore  CONTRIBUTING.md  README.md  pig-python.code-workspace  pyproject.toml  requirements.txt
Agent/examples/chat/: README.md  main.py  muscle_memory.py
Agent/examples/chat/agent/: __init__.py  chat_agent.py  pig_agent.py  utils.py
Agent/src/pig/: __init__.py  api_client.py  cli.py  connection_session.py  connections.py  pig.py  sync_wrapper.py
Agent/tests/: connection_quick_test.py  e2e_test.py  load_test.py  local_test.py  sync_wrapper_test.py
Agent/vida-service/: Dockerfile  config.py  main.py  requirements.txt
Agent/vida-service/agent/: calibration.py  catalog_browse.py  direct_search.py  part_classifier.py  result_parser.py  screen_detector.py  screen_hash.py  tools.py  vida_agent.py  vida_lifecycle.py  vida_prompts.py  vida_screens.py  vida_workflows.py  workflow_cache.py
Agent/vida-service/api/: models.py  routes.py
Agent/vida-service/bridge/: direct_client.py  ws_bridge.py
Client/: .gitignore  CONTRIBUTING.md  README.md  build.zig  build.zig.zon
Client/contributing/: building_ffmpeg.md  building_on_windows.md
Client/src/: Computer.zig  config.zig  main.zig  overlay.zig  server.zig  stream.zig  tunnel.zig
Client/src/display/: Capture.zig  Display.zig  Encoder.zig  Frame.zig  Image.zig  c.zig
Client/src/input/: Keyboard.zig  Mouse.zig  c.zig
Client/src/stream/: EncoderConfig.zig  H264Encoder.zig  RTMPOutput.zig
examples/chat/: main.py  requirements.txt
src/pig/: machines.py
(+5 files in other folders)
