[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pig-python"
version = "0.1.2"
authors = [
    { name = "Erik Dunteman", email = "erik@pig.dev" },
]
description = "pig"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "aiohttp>=3.8.0",
    "aiohttp-retry>=2.8.0",
    "click>=8.0.0",
    "simple-term-menu>=1.0.0",
    "typing_extensions",
    "iso8601>=1.0.0",
    "tabulate>=0.9.0"
]

[project.scripts]
pig = "pig.cli:main"

[tool.hatch.build]
packages = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/pig"] 

# .[dev]

[project.optional-dependencies]
dev = [
    "ruff>=0.3.0",
    "twine",
    "build"
]

[tool.ruff]
include = ["src/pig/**/*.py", "tests/**/*.py"]
target-version = "py37"

# Enable rules
lint.select = [
    "E",  # pycodestyle
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "N",  # pep8-naming
]
lint.ignore = []
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

line-length = 160

[tool.uv.workspace]
members = ["examples/chat"]
